replace new operator with valueOf factory method (Part II)