@@ -24,7 +24,6 @@ You should have received a copy of the GNU Affero General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>.
 */
 
-
 package de.independit.scheduler.server.parser;
 
 import java.io.*;
@@ -58,9 +57,8 @@ public class CreateFootprint extends Node
 		Long   fId = f.getId(sysEnv);
 		Integer amount;
 		Integer keepMode;
-
 		Long rsmpId = null;
-		Integer lockmode = new Integer(SDMSResourceRequirement.N);
+		Integer lockmode = Integer.valueOf(SDMSResourceRequirement.N);
 		Boolean isSticky = Boolean.FALSE;
 		String stickyName = null;
 		Long stickyParent = null;
@@ -82,10 +80,10 @@ public class CreateFootprint extends Node
 		nrId = nr.getId(sysEnv);
 
 		amount = (Integer) with.get(ParseStr.S_AMOUNT);
-		if(amount == null) amount = new Integer(0);
+		if(amount == null) amount = Integer.valueOf(0);
 
 		keepMode = (Integer) with.get(ParseStr.S_KEEP);
-		if(keepMode == null) keepMode = new Integer(SDMSResourceRequirement.NOKEEP);
+		if(keepMode == null) keepMode = Integer.valueOf(SDMSResourceRequirement.NOKEEP);
 
 		rr = SDMSResourceRequirementTable.table.create(sysEnv,
 					nrId, fId, amount, keepMode, isSticky, stickyName, stickyParent,
@@ -103,7 +101,7 @@ public class CreateFootprint extends Node
 			f = SDMSFootprintTable.table.create(sysEnv, name);
 		} catch(DuplicateKeyException dke) {
 			if(replace) {
-				AlterFootprint af = new AlterFootprint(new ObjectURL(new Integer(Parser.FOOTPRINT), name), resources, Boolean.FALSE);
+				AlterFootprint af = new AlterFootprint(new ObjectURL(Integer.valueOf(Parser.FOOTPRINT), name), resources, Boolean.FALSE);
 				af.setEnv(env);
 				af.go(sysEnv);
 				result = af.result;
