@@ -67,7 +67,7 @@ public class CreateTrigger extends ManipTrigger
 	{
 		oType = SDMSTrigger.JOB_DEFINITION;
 		objpath = (Vector) objType.value;
-		objectType = new Integer(oType);
+		objectType = Integer.valueOf(oType);
 		SDMSSchedulingEntity fireJob = SDMSSchedulingEntityTable.get(sysEnv, objpath, null);
 		fireId = fireJob.getId(sysEnv);
 		SDMSSchedulingEntity triggerJob;
@@ -91,10 +91,10 @@ public class CreateTrigger extends ManipTrigger
 			if (with.containsKey(ParseStr.S_SUBMIT)) {
 				throw new CommonErrorException(new SDMSMessage(sysEnv, "03108190857", "Submit and Rerun cannot be specified both"));
 			}
-			action = new Integer(SDMSTrigger.RERUN);
+			action = Integer.valueOf(SDMSTrigger.RERUN);
 			iaction = SDMSTrigger.RERUN;
 		} else {
-			action = new Integer(SDMSTrigger.SUBMIT);
+			action = Integer.valueOf(SDMSTrigger.SUBMIT);
 			iaction = SDMSTrigger.SUBMIT;
 		}
 
@@ -106,7 +106,7 @@ public class CreateTrigger extends ManipTrigger
 					new SDMSMessage(sysEnv, "03402131550", "Submit privilege on $1 missing", triggerJob.pathString(sysEnv))
 				);
 			seId = triggerJob.getId(sysEnv);
-			action = new Integer(SDMSTrigger.SUBMIT);
+			action = Integer.valueOf(SDMSTrigger.SUBMIT);
 			iaction = SDMSTrigger.SUBMIT;
 		} else	{
 			if ((folderpath == null) && (iaction == SDMSTrigger.RERUN)) {
@@ -174,7 +174,7 @@ public class CreateTrigger extends ManipTrigger
 			}
 		} else {
 			if (action.intValue() == SDMSTrigger.RERUN) {
-				triggertype = new Integer(SDMSTrigger.IMMEDIATE_LOCAL);
+				triggertype = Integer.valueOf(SDMSTrigger.IMMEDIATE_LOCAL);
 			} else {
 				throw new CommonErrorException(new SDMSMessage(sysEnv, "03206211424", "Triggertype must be specified"));
 			}
@@ -192,7 +192,7 @@ public class CreateTrigger extends ManipTrigger
 				throw new CommonErrorException(
 						new SDMSMessage(sysEnv, "02402180658", "Group clause is mandatory for master triggers"));
 			final String gName = (String) with.get(ParseStr.S_GROUP);
-			final Long gId = SDMSGroupTable.idx_name_deleteVersion_getUnique(sysEnv, new SDMSKey(gName, new Long(0))).getId(sysEnv);
+			final Long gId = SDMSGroupTable.idx_name_deleteVersion_getUnique(sysEnv, new SDMSKey(gName, Long.valueOf(0))).getId(sysEnv);
 			if (mainJob != null) mainJob.checkSubmitForGroup(sysEnv, gId);
 			else triggerJob.checkSubmitForGroup(sysEnv, gId);
 		} else {
@@ -237,7 +237,7 @@ public class CreateTrigger extends ManipTrigger
 
 		maxRetry = (Integer) with.get(ParseStr.S_SUBMITCOUNT);
 		if(maxRetry == null) {
-			maxRetry = new Integer(1);
+			maxRetry = Integer.valueOf(1);
 		}
 
 		rscstate = null;
@@ -274,7 +274,7 @@ public class CreateTrigger extends ManipTrigger
 			throw new CommonErrorException(new SDMSMessage(sysEnv, "03206250058", "Trigger can only be defined for synchronizing resources"));
 		}
 
-		objectType = new Integer(oType);
+		objectType = Integer.valueOf(oType);
 
 		if (with.containsKey(ParseStr.S_ACTIVE)) {
 			active = (Boolean) with.get(ParseStr.S_ACTIVE);
@@ -289,7 +289,7 @@ public class CreateTrigger extends ManipTrigger
 		if (with.containsKey(ParseStr.S_PARENT) && with.get(ParseStr.S_PARENT) != null)
 			throw new CommonErrorException(new SDMSMessage(sysEnv, "03109081538", "Parent Scheduling Entity option is only valid for Object Monitor Triggers"));
 
-		action = new Integer(SDMSTrigger.SUBMIT);
+		action = Integer.valueOf(SDMSTrigger.SUBMIT);
 		iaction = SDMSTrigger.SUBMIT;
 
 		folderpath = (Vector) with.get(ParseStr.S_SUBMIT);
@@ -310,7 +310,7 @@ public class CreateTrigger extends ManipTrigger
 				throw new CommonErrorException(new SDMSMessage(sysEnv, "03206210043", "Triggertype must be Immediate local for resource triggers"));
 			}
 		} else {
-			triggertype = new Integer(SDMSTrigger.IMMEDIATE_LOCAL);
+			triggertype = Integer.valueOf(SDMSTrigger.IMMEDIATE_LOCAL);
 		}
 		isMaster = (Boolean) with.get(ParseStr.S_MASTER);
 		if(isMaster != null) {
@@ -337,7 +337,7 @@ public class CreateTrigger extends ManipTrigger
 		if(maxRetry != null) {
 			throw new CommonErrorException(new SDMSMessage(sysEnv, "03206210045", "Retry Count not allowed for resource triggers"));
 		} else {
-			maxRetry = new Integer(0);
+			maxRetry = Integer.valueOf(0);
 			isWarnOnLimit = Boolean.FALSE;
 		}
 
@@ -460,18 +460,26 @@ public class CreateTrigger extends ManipTrigger
 			final String gName = (String) with.get(ParseStr.S_GROUP);
 			if (gName == null) {
 			} else {
-				gId = SDMSGroupTable.idx_name_deleteVersion_getUnique(sysEnv, new SDMSKey(gName, new Long(0))).getId(sysEnv);
+				gId = SDMSGroupTable.idx_name_deleteVersion_getUnique(sysEnv, new SDMSKey(gName, Long.valueOf(0))).getId(sysEnv);
 			}
 		}
 
 		try {
+			sysEnv.tx.beginSubTransaction(sysEnv);
+
 			t = SDMSTriggerTable.table.create(sysEnv, name, fireId, objectType, seId, mainSeId, parentSeId, active, isInverse, action,
 							triggertype, isMaster, isSuspend, isCreate, isChange, isDelete, isGroup,
 							resumeAt, resumeIn, resumeBase, isWarnOnLimit, limitState, maxRetry, gId, condition,
 							checkAmount, checkBase);
+			checkUniqueness(sysEnv, name, fireId, seId, isInverse);
+			sysEnv.tx.commitSubTransaction(sysEnv);
 		} catch(DuplicateKeyException dke) {
+			sysEnv.tx.rollbackSubTransaction(sysEnv);
 			if(replace) {
-				AlterTrigger at = new AlterTrigger(name, fireId, objectType.intValue(), with, Boolean.FALSE);
+				Long fId = fireId;
+				if ((Boolean) with.get(ParseStr.S_INVERSE))
+					fId = seId;
+				AlterTrigger at = new AlterTrigger(name, fId, objectType.intValue(), with, Boolean.FALSE);
 				at.setEnv(env);
 				at.go(sysEnv);
 				result = at.result;
@@ -479,17 +487,15 @@ public class CreateTrigger extends ManipTrigger
 			} else {
 				throw dke;
 			}
+		} catch (Exception e) {
+			sysEnv.tx.rollbackSubTransaction(sysEnv);
+			throw e;
 		}
 		t.checkConditionSyntax(sysEnv);
 
 		if (with.containsKey(ParseStr.S_PARAMETERS)) {
 			checkAndCreateParameters(sysEnv, t);
 		}
-
-		if (isInverse.booleanValue())
-			checkUniqueness(sysEnv, name, fireId, seId, isInverse);
-		else
-			checkUniqueness(sysEnv, name, fireId, seId, isInverse);
 
 		tId = t.getId(sysEnv);
 
