@@ -23,8 +23,6 @@ GNU Affero General Public License for more details.
 You should have received a copy of the GNU Affero General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>.
 */
-
-
 package de.independit.scheduler.server.parser;
 
 import java.io.*;
@@ -41,7 +39,7 @@ public class LinkResource extends ManipResource
 
 	public final static String __version = "@(#) $Id: LinkResource.java,v 2.4.4.1 2013/03/14 10:24:35 ronald Exp $";
 
-	static final Float fzero = new Float(0);
+	static final Float fzero = Float.valueOf(0);
 
 	private ObjectURL scope;
 	private boolean force;
@@ -74,7 +72,7 @@ public class LinkResource extends ManipResource
 		tag = null;
 		traceInterval = null;
 		traceBase = null;
-		baseMultiplier = new Integer(10 * 60);
+		baseMultiplier = Integer.valueOf(10 * 60);
 
 		nrId = r.getNrId(sysEnv);
 		sId = s.getId(sysEnv);
@@ -86,7 +84,7 @@ public class LinkResource extends ManipResource
 		try {
 			r = SDMSResourceTable.table.create(sysEnv, nrId, sId, null, gId, linkTo, null, null, null, null, null,
 								null, null, null, null, null, null, null, baseMultiplier,
-								fzero, fzero, fzero, fzero, new Long(0), new Long(0));
+								fzero, fzero, fzero, fzero, Long.valueOf(0), Long.valueOf(0));
 		} catch (DuplicateKeyException dke) {
 			if (!force) throw dke;
 			replaced = true;
@@ -94,14 +92,12 @@ public class LinkResource extends ManipResource
 			Vector v = r.getAllocations(sysEnv);
 			if (v.size() == 0) {
 				if (r.getLinkId(sysEnv) != null) {
-
 					r.setLinkId(sysEnv, linkTo);
 				} else {
-
 					r.delete(sysEnv);
 					r = SDMSResourceTable.table.create(sysEnv, nrId, sId, null, gId, linkTo, null, null, null, null, null,
 									null, null, null, null, null, null, null, baseMultiplier,
-									fzero, fzero, fzero, fzero, new Long(0), new Long(0));
+									fzero, fzero, fzero, fzero, Long.valueOf(0), Long.valueOf(0));
 				}
 			}
 		}
