@@ -23,8 +23,6 @@ GNU Affero General Public License for more details.
 You should have received a copy of the GNU Affero General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>.
 */
-
-
 package de.independit.scheduler.server.parser;
 
 import java.io.*;
@@ -56,7 +54,6 @@ public class ListEnvironment extends Node
 		Vector desc = new Vector();
 
 		desc.add("ID");
-
 		desc.add("NAME");
 		desc.add("PRIVS");
 
@@ -82,7 +79,7 @@ public class ListEnvironment extends Node
 
 		result.setFeedback(
 			new SDMSMessage(sysEnv, "03201232119", "$1 Environment(s) found",
-					new Integer(d_container.lines)));
+					Integer.valueOf(d_container.lines)));
 	}
 }
 
