@@ -23,8 +23,6 @@ GNU Affero General Public License for more details.
 You should have received a copy of the GNU Affero General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>.
 */
-
-
 package de.independit.scheduler.server.parser;
 
 import java.io.*;
@@ -71,35 +69,21 @@ public class ListScope extends Node
 		desc.add("ID");
 		desc.add("NAME");
 		desc.add("OWNER");
-
 		desc.add("TYPE");
-
 		desc.add("IS_TERMINATE");
-
 		desc.add("HAS_ALTERED_CONFIG");
-
 		desc.add("IS_SUSPENDED");
-
 		desc.add("IS_ENABLED");
-
 		desc.add("IS_REGISTERED");
-
 		desc.add("IS_CONNECTED");
-
 		desc.add("STATE");
-
 		desc.add("PID");
-
 		desc.add("NODE");
-
 		desc.add("IDLE");
-
 		desc.add("NOPDELAY");
-
 		desc.add("ERRMSG");
 
 		desc.add("SUBSCOPES");
-
 		desc.add("RESOURCES");
 		desc.add("PRIVS");
 
@@ -126,7 +110,7 @@ public class ListScope extends Node
 		result.setOutputContainer(d_container);
 
 		result.setFeedback(new SDMSMessage(sysEnv, "03201281436",
-				"$1 Object(s) found", new Integer(d_container.lines)));
+				"$1 Object(s) found", Integer.valueOf(d_container.lines)));
 	}
 
 	private void fillVector(SystemEnvironment sysEnv, SDMSScope s, Vector v)
@@ -142,17 +126,17 @@ public class ListScope extends Node
 		v.add(s.getIsSuspended(sysEnv));
 		v.add(s.getIsEnabled(sysEnv));
 		v.add(s.getIsRegistered(sysEnv));
-		v.add(new Boolean(s.isConnected(sysEnv)));
+		v.add(Boolean.valueOf(s.isConnected(sysEnv)));
 		v.add(s.getStateAsString(sysEnv));
 		v.add(s.getPid(sysEnv));
 		v.add(s.getNode(sysEnv));
-		v.add(new Long(s.getIdle(sysEnv)));
+		v.add(Long.valueOf(s.getIdle(sysEnv)));
 		v.add(ScopeConfig.getItem(sysEnv, s, Config.NOP_DELAY));
 		v.add(s.getErrmsg(sysEnv));
 		Vector v1 = SDMSScopeTable.idx_parentId.getVector(sysEnv, s.getId(sysEnv));
 		Vector v2 = SDMSResourceTable.idx_scopeId.getVector(sysEnv, s.getId(sysEnv));
-		v.add(new Integer(v1.size()));
-		v.add(new Integer(v2.size()));
+		v.add(Integer.valueOf(v1.size()));
+		v.add(Integer.valueOf(v2.size()));
 		v.add(s.getPrivileges(sysEnv).toString());
 	}
 
