@@ -238,7 +238,7 @@ class IntegerCaster extends Caster
 	{
 		try {
 			long i = Long.parseLong(v);
-			return new Long(i);
+			return Long.valueOf(i);
 		} catch (NumberFormatException nfe) {
 			return null;
 		}
@@ -252,7 +252,7 @@ class DoubleCaster extends Caster
 	{
 		try {
 			double x = Double.parseDouble(v);
-			return new Double(x);
+			return Double.valueOf(x);
 		} catch (NumberFormatException nfe) {
 			return null;
 		}
