@@ -23,8 +23,6 @@ GNU Affero General Public License for more details.
 You should have received a copy of the GNU Affero General Public License
 along with this program. If not, see <http://www.gnu.org/licenses/>.
 */
-
-
 package de.independit.scheduler.server.parser.filter;
 
 import java.io.*;
@@ -79,12 +77,11 @@ public class SubmitUserFilter extends Filter
 			for(int i = 0; i < names.size(); i++) {
 				try {
 					Long gid = SDMSGroupTable.idx_name_deleteVersion_getUnique(
-					                   sysEnv, new SDMSKey ((String)(names.get(i)), new Long(0))).getId(sysEnv);
+					                   sysEnv, new SDMSKey ((String)(names.get(i)), Long.valueOf(0))).getId(sysEnv);
 					owners.add(gid);
 				} catch (SerializationException e) {
 					throw new RuntimeException();
 				} catch (SDMSException nfe) {
-
 				}
 			}
 		}
